argocd/manifests/crypto-spot-bot/overlay/contabo/add-deployment-env-vars.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: crypto-spot-bot
spec:
  template:
    spec:
      containers:
        - name: crypto-spot-bot
